# bili_rec_monitor

./: .gitignore  README.md  bili_rec_monitor.py  config.example.yml  config.yml  main.py  pcs.py  pcs_auth.py  pyproject.toml  requirements.txt
