[tool.poetry]
name = "BILIBILI Record Monitor"
version = "1.0.0"
description = "基于 BililiveRecorder 和 Webhook 的BILIBILI录播文件监视器"
authors = ["Nya-WSL"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyyaml = "^6.0.2"
wxpusher = "2.3.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
aiohttp = "^3.11.16"
urllib3 = "^2.4.0"
ruamel-yaml = "^0.18.10"
tzdata = "^2025.2"
py-dateutil = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
